# hello_world

./: .gitignore  CMakeLists.txt  Jenkinsfile  Readme.txt  sonar-project.properties
reports/: report.json
src/: CMakeLists.txt  Dockerfile  main.cc
